tests/snapshots/cli__help_output.snap
---
source: tests/cli.rs
expression: stdout
---
Calculate nutritional information for ingredients and recipes

Usage: nutriterm <COMMAND>

Commands:
  init         Initialize current directory as a recipe catalog
  recipe       Display nutrition for a specific recipe
  kitchen-ref  Generate kitchen reference with all recipes in HTML format
  help         Print this message or the help of the given subcommand(s)

Options:
  -h, --help  Print help
