tests/snapshots/cli__improved_file_error_unreadable_ingredients.snap
---
source: tests/cli.rs
expression: normalized_stderr
---
Error: Cannot read file [TEMP_DIR]/test-workspace/ingredients.jsonc: Is a directory (os error 21)

Tip: Make sure the file exists and you have read permissions. Run 'nutriterm init' to create missing workspace files.
