tests/snapshots/cli__improved_file_error_unreadable_recipes.snap
---
source: tests/cli.rs
expression: normalized_stderr
---
error: unrecognized subcommand 'list-recipes'

  tip: a similar subcommand exists: 'recipe'

Usage: nutriterm <COMMAND>

For more information, try '--help'.
