tests/snapshots/cli__no_subcommand_error.snap
---
source: tests/cli.rs
expression: stderr
---
Calculate nutritional information for ingredients and recipes

Usage: nutriterm <COMMAND>

Commands:
  init         Initialize current directory as a recipe workspace
  recipe       Display nutrition for a specific recipe
  kitchen-ref  Generate kitchen reference with all recipes in markdown format
  help         Print this message or the help of the given subcommand(s)

Options:
  -h, --help  Print help
